<resources>

    <string name="app_name">Crystal Note</string>

    <string name="action_reset">Clear</string>
    <string name="action_set_importance">Set color</string>
    <string name="action_set_important">Set as important</string>
    <string name="action_set_normal">Set as normal</string>
    <string name="action_set_not_important">Set as not important</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_set_as_widget">Set as widget</string>
    <string name="action_saved">Saved</string>
    <string name="action_load">Load</string>
    <string name="action_create">Create new</string>
    <string name="action_settings">Settings</string>
    <string name="views_not_available">Save your notes first</string>
    <string name="tap_twice_to_exit">Press back twice to exit</string>
    <string name="action_rate">Rate this app</string>

    <string name="rate">Rate&#160;</string>
    <string name="rate_long1">If you enjoy using&#160;</string>
    <string name="rate_long2">, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_remind">Remind me later</string>
    <string name="rate_dismiss">No, thanks</string>

    <string name="important">Important</string>
    <string name="normal">Normal</string>
    <string name="not_important">Not important</string>

</resources>
