<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:Notes="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_set_as_widget"
        android:title="@string/action_set_as_widget"
        Notes:showAsAction="ifRoom" />

    <group android:id="@+id/group_menu">

        <item android:id="@+id/action_undo"
            android:title="@string/action_undo"
            android:icon="@drawable/ic_action_undo"
            Notes:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_reset"
            android:title="@string/action_reset" />

        <item
            android:id="@+id/action_set_importance"
            android:title="@string/action_set_importance" >

            <menu>
                <item android:id="@+id/action_set_important"
                    android:title="@string/action_set_important" />
                <item android:id="@+id/action_set_normal"
                    android:title="@string/action_set_normal" />
                <item android:id="@+id/action_set_not_important"
                    android:title="@string/action_set_not_important" />
            </menu>

        </item>

    </group>
</menu>